argo-workflows/overlays/production/patch-argo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  template:
    spec:
      containers:
        - name: argo-server
          args:
            - server
            - --secure=false
          readinessProbe:
            httpGet:
              port: 2746
              scheme: HTTP
