argo-workflows/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows
  namespace: argo
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
  #   ingress.kubernetes.io/ssl-redirect: "false"
  #   nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: argo-server
           port:
             number: 2746
    host: staging.argo-workflows.kube.kabaconde.com
